// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Drawer/demo/basic.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Drawer
    </span>
  </button>
</div>
`;

exports[`renders Drawer/demo/container.md correctly 1`] = `
<div
  style="width:100%;height:300px;background-color:var(--color-fill-2);position:relative;overflow:hidden;line-height:300px;text-align:center"
>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open
    </span>
  </button>
</div>
`;

exports[`renders Drawer/demo/drawer_form.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Drawer
    </span>
  </button>
</div>
`;

exports[`renders Drawer/demo/nest.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Drawer
    </span>
  </button>
</div>
`;

exports[`renders Drawer/demo/nofooter.md correctly 1`] = `
<div>
  <label
    class="arco-checkbox"
    style="margin-right:20px"
  >
    <input
      type="checkbox"
    />
    <span
      class="arco-icon-hover arco-checkbox-icon-hover arco-checkbox-mask-wrapper"
    >
      <div
        class="arco-checkbox-mask"
      >
        <svg
          aria-hidden="true"
          class="arco-checkbox-mask-icon"
          fill="currentColor"
          focusable="false"
          height="200"
          viewBox="0 0 1024 1024"
          width="200"
        >
          <path
            d="M877.44815445 206.10060629a64.72691371 64.72691371 0 0 0-95.14856334 4.01306852L380.73381888 685.46812814 235.22771741 533.48933518a64.72691371 64.72691371 0 0 0-92.43003222-1.03563036l-45.82665557 45.82665443a64.72691371 64.72691371 0 0 0-0.90617629 90.61767965l239.61903446 250.10479331a64.72691371 64.72691371 0 0 0 71.19960405 15.14609778 64.33855261 64.33855261 0 0 0 35.08198741-21.23042702l36.24707186-42.71976334 40.5190474-40.77795556-3.36579926-3.49525333 411.40426297-486.74638962a64.72691371 64.72691371 0 0 0-3.88361443-87.64024149l-45.3088404-45.43829334z"
            p-id="840"
          />
        </svg>
      </div>
    </span>
    <span
      class="arco-checkbox-text"
    >
      Hide title
    </span>
  </label>
  <label
    class="arco-checkbox"
    style="margin-right:20px"
  >
    <input
      type="checkbox"
    />
    <span
      class="arco-icon-hover arco-checkbox-icon-hover arco-checkbox-mask-wrapper"
    >
      <div
        class="arco-checkbox-mask"
      >
        <svg
          aria-hidden="true"
          class="arco-checkbox-mask-icon"
          fill="currentColor"
          focusable="false"
          height="200"
          viewBox="0 0 1024 1024"
          width="200"
        >
          <path
            d="M877.44815445 206.10060629a64.72691371 64.72691371 0 0 0-95.14856334 4.01306852L380.73381888 685.46812814 235.22771741 533.48933518a64.72691371 64.72691371 0 0 0-92.43003222-1.03563036l-45.82665557 45.82665443a64.72691371 64.72691371 0 0 0-0.90617629 90.61767965l239.61903446 250.10479331a64.72691371 64.72691371 0 0 0 71.19960405 15.14609778 64.33855261 64.33855261 0 0 0 35.08198741-21.23042702l36.24707186-42.71976334 40.5190474-40.77795556-3.36579926-3.49525333 411.40426297-486.74638962a64.72691371 64.72691371 0 0 0-3.88361443-87.64024149l-45.3088404-45.43829334z"
            p-id="840"
          />
        </svg>
      </div>
    </span>
    <span
      class="arco-checkbox-text"
    >
      Hide footer
    </span>
  </label>
  <label
    class="arco-checkbox"
  >
    <input
      type="checkbox"
    />
    <span
      class="arco-icon-hover arco-checkbox-icon-hover arco-checkbox-mask-wrapper"
    >
      <div
        class="arco-checkbox-mask"
      >
        <svg
          aria-hidden="true"
          class="arco-checkbox-mask-icon"
          fill="currentColor"
          focusable="false"
          height="200"
          viewBox="0 0 1024 1024"
          width="200"
        >
          <path
            d="M877.44815445 206.10060629a64.72691371 64.72691371 0 0 0-95.14856334 4.01306852L380.73381888 685.46812814 235.22771741 533.48933518a64.72691371 64.72691371 0 0 0-92.43003222-1.03563036l-45.82665557 45.82665443a64.72691371 64.72691371 0 0 0-0.90617629 90.61767965l239.61903446 250.10479331a64.72691371 64.72691371 0 0 0 71.19960405 15.14609778 64.33855261 64.33855261 0 0 0 35.08198741-21.23042702l36.24707186-42.71976334 40.5190474-40.77795556-3.36579926-3.49525333 411.40426297-486.74638962a64.72691371 64.72691371 0 0 0-3.88361443-87.64024149l-45.3088404-45.43829334z"
            p-id="840"
          />
        </svg>
      </div>
    </span>
    <span
      class="arco-checkbox-text"
    >
      Hide close icon
    </span>
  </label>
  <br />
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    style="margin-top:20px"
    type="button"
  >
    <span>
      Open Drawer
    </span>
  </button>
</div>
`;

exports[`renders Drawer/demo/position.md correctly 1`] = `
<div>
  <div
    class="arco-radio-group arco-radio-size-default arco-radio-mode-outline"
  >
    <label
      class="arco-radio"
    >
      <input
        name="placement"
        type="radio"
        value="top"
      />
      <span
        class="arco-icon-hover arco-radio-icon-hover arco-radio-mask-wrapper"
      >
        <div
          class="arco-radio-mask"
        />
      </span>
      <span
        class="arco-radio-text"
      >
        Top
      </span>
    </label>
    <label
      class="arco-radio"
    >
      <input
        name="placement"
        type="radio"
        value="bottom"
      />
      <span
        class="arco-icon-hover arco-radio-icon-hover arco-radio-mask-wrapper"
      >
        <div
          class="arco-radio-mask"
        />
      </span>
      <span
        class="arco-radio-text"
      >
        Bottom
      </span>
    </label>
    <label
      class="arco-radio"
    >
      <input
        name="placement"
        type="radio"
        value="left"
      />
      <span
        class="arco-icon-hover arco-radio-icon-hover arco-radio-mask-wrapper"
      >
        <div
          class="arco-radio-mask"
        />
      </span>
      <span
        class="arco-radio-text"
      >
        Left
      </span>
    </label>
    <label
      class="arco-radio arco-radio-checked"
    >
      <input
        checked=""
        name="placement"
        type="radio"
        value="right"
      />
      <span
        class="arco-icon-hover arco-radio-icon-hover arco-icon-hover-disabled arco-radio-mask-wrapper"
      >
        <div
          class="arco-radio-mask"
        />
      </span>
      <span
        class="arco-radio-text"
      >
        Right
      </span>
    </label>
  </div>
  <br />
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    style="margin-top:20px"
    type="button"
  >
    <span>
      Open Drawer
    </span>
  </button>
</div>
`;

exports[`renders Drawer/demo/preview.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Drawer
    </span>
  </button>
</div>
`;
